--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,26 @@ td, th {
 }
 
 /******* HOMEPAGE *******/
+/* NAV */
+nav {
+    padding: 0 5%;
+    background: url(/images/swirl.png);
+    background-repeat: repeat;
+}
+
+nav ul {
+    display: flex;
+    justify-content: flex-end;
+}
+
+nav ul li {
+    list-style-type: none;
+    margin-left: 20px;
+}
+
+nav ul li a {
+    color: #333;
+}
 
 /*  HEADER  */
 header {
@@ -90,6 +110,25 @@ header img {
 section#expectations {
     background: #BDD5EA;
     border-bottom: 1px dashed #495867;
+    text-align: center;
+}
+
+section#expectations strong {
+    font-size: 32px;
+}
+
+section#expectations h3 {
+    margin-bottom: 50px;
+}
+
+section#expectations ul {
+    display: flex;
+    justify-content: space-around;
+    padding:0;
+}
+
+section#expectations ul li {
+    list-style-type: none;
 }
 
 /* THREE POINTS */
@@ -349,4 +388,64 @@ footer {
         margin: 0;
     }
 }
+@media only screen and (max-width: 479px) {
+    h1 {
+        font-size: 28px;
+    }
 
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    body {
+        font-size: 16px;
+    }
+
+    .wrap {
+        padding: 20px;
+    }
+
+    #header {
+        padding: 80px 10px;
+    }
+
+    .button {
+        padding: 10px;
+    }
+
+    .three-points-section {
+        min-height: 200px;
+    }
+
+    .three-points-section-image {
+        display: none;
+    }
+
+    .three-points-section-text {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .speaker {
+        clear: both;
+        min-height: 200px;
+        margin-bottom: 40px;
+    }
+
+    .speaker-image {
+        display: none;
+    }
+
+    .speaker-text {
+        width: 100%;
+    }
+
+    .speaker-column-1, .speaker-column-2 {
+        border: none;
+        box-shadow: none;
+    }
+}
